more on frontend

--- a/trainTicketBooking-server/src/main/resources/static/paymentHistory.html
+++ b/trainTicketBooking-server/src/main/resources/static/paymentHistory.html
@@ -365,7 +365,7 @@
                 </h2>
                 <div class="flex justify-between mb-2">
                     <span class="text-gray-300">Amount:</span>
-                    <span class="text-xl font-bold text-white">$${payment.amount.toFixed(2)}</span>
+                    <span class="text-xl font-bold text-white">₹${payment.amount.toFixed(2)}</span>
                 </div>
                 <div class="flex justify-between mb-2">
                     <span class="text-gray-300">Payment Date:</span>
