--- a/trainTicketBooking-server/src/main/resources/static/traincreate.html
+++ b/trainTicketBooking-server/src/main/resources/static/traincreate.html
@@ -9,8 +9,7 @@
     <style>
         body {
             font-family: 'Inter', sans-serif;
-            /* background-color: #f0f4f8; */ /* Old */
-            background: linear-gradient(135deg, #e9ecef 0%, #f8f9fa 100%); /* Enhanced background */
+            background: linear-gradient(135deg, #e9ecef 0%, #f8f9fa 100%);
             color: #2c3e50;
             display: flex;
             align-items: center;
@@ -26,14 +25,14 @@
             padding: 40px;
             border-radius: 12px;
             box-shadow: 0 6px 20px rgba(0, 0, 0, 0.08);
-            border: 1px solid #e2e8f0; /* Added light border */
-            transition: transform 0.2s ease, box-shadow 0.2s ease, border-color 0.2s ease; /* Added border-color to transition */
+            border: 1px solid #e2e8f0;
+            transition: transform 0.2s ease, box-shadow 0.2s ease, border-color 0.2s ease;
         }
 
         .container:hover {
             transform: translateY(-4px);
-            box-shadow: 0 8px 25px rgba(0, 0, 0, 0.12); /* Slightly intensified shadow */
-            border-color: #a7bcf5; /* Accent color for border on hover */
+            box-shadow: 0 8px 25px rgba(0, 0, 0, 0.12);
+            border-color: #a7bcf5;
         }
 
         h2 {
@@ -42,7 +41,7 @@
             text-align: center;
             font-weight: 600;
             letter-spacing: -0.02em;
-            text-shadow: 1px 1px 2px rgba(37, 99, 235, 0.1); /* Subtle shadow */
+            text-shadow: 1px 1px 2px rgba(37, 99, 235, 0.1);
         }
 
         .form-group label {
@@ -54,32 +53,29 @@
         }
 
         .form-group label:hover {
-            color: #1e40af; /* Slightly darker blue on hover */
+            color: #1e40af;
         }
 
         .form-control {
             padding: 12px 15px;
             border: 1px solid #e2e8f0;
-            /* border-radius: 6px; */ /* Handled by specific input-group rules */
             transition: border-color 0.3s ease, box-shadow 0.3s ease;
             font-size: 1rem;
             color: #2d3748;
         }
 
-        /* Ensuring focus on form-control directly also has a distinct style if not part of input-group */
         .form-control:focus {
             border-color: #2563eb;
-            box-shadow: 0 0 0 3px rgba(37, 99, 235, 0.2); /* Adjusted alpha for primary blue */
+            box-shadow: 0 0 0 3px rgba(37, 99, 235, 0.2);
         }
 
         .btn-primary {
-            /* background-color: #2563eb; */ /* Old */
-            background-image: linear-gradient(to right, #2563eb 0%, #1d4ed8 100%); /* Gradient */
+            background-image: linear-gradient(to right, #2563eb 0%, #1d4ed8 100%);
             border: none;
             padding: 12px 25px;
             border-radius: 6px;
             font-weight: 500;
-            transition: background-image 0.3s ease, transform 0.2s ease, box-shadow 0.3s ease; /* Adjusted transition property */
+            transition: background-image 0.3s ease, transform 0.2s ease, box-shadow 0.3s ease;
             width: 100%;
             display: inline-flex;
             align-items: center;
@@ -88,8 +84,7 @@
         }
 
         .btn-primary:hover {
-            /* background-color: #1e40af; */ /* Old */
-            background-image: linear-gradient(to right, #1e40af 0%, #1e3a8a 100%); /* Darker gradient */
+            background-image: linear-gradient(to right, #1e40af 0%, #1e3a8a 100%);
             transform: translateY(-2px);
             box-shadow: 0 5px 12px rgba(0, 0, 0, 0.15);
         }
@@ -105,9 +100,8 @@
             border-radius: 6px;
             font-size: 0.95rem;
             font-weight: 400;
-            opacity: 0; /* Initial state for animation */
-            transform: translateY(-10px); /* Initial state for animation */
-            /* transition: opacity 0.3s ease, transform 0.3s ease; */ /* Handled by animation */
+            opacity: 0;
+            transform: translateY(-10px);
             animation: fadeInAlert 0.3s forwards;
         }
 
@@ -135,52 +129,48 @@
         }
 
         .input-group {
-            margin-bottom: 25px; /* Keep existing margin */
-            display: flex; /* Ensure proper alignment for focus-within */
+            margin-bottom: 25px;
+            display: flex;
         }
 
         .input-group-prepend .input-group-text {
             background-color: #edf2f7;
             border: 1px solid #e2e8f0;
-            border-right: none; /* Remove right border to blend with input */
+            border-right: none;
             border-radius: 6px 0 0 6px;
             color: #4a5568;
-            padding: 8px 12px; /* Use existing padding */
+            padding: 8px 12px;
             display: flex;
             align-items: center;
-            transition: border-color 0.3s ease, background-color 0.3s ease, color 0.3s ease; /* Added transitions */
+            transition: border-color 0.3s ease, background-color 0.3s ease, color 0.3s ease;
         }
 
         .input-group-prepend .input-group-text svg {
-            fill: currentColor; /* SVG will inherit color from parent */
-            transition: fill 0.3s ease; /* Transition for icon color */
+            fill: currentColor;
+            transition: fill 0.3s ease;
         }
 
         .input-group .form-control {
-            border-radius: 0 6px 6px 0; /* Specific radius for input in a group */
-            border-left: none; /* Remove left border as prepend has right */
+            border-radius: 0 6px 6px 0;
+            border-left: none;
         }
 
-        /* When any element inside .input-group is focused */
         .input-group:focus-within .input-group-prepend .input-group-text {
-            border-color: #2563eb; /* Primary color for border */
-            background-color: #e0e7ff; /* Lighter shade of primary for background */
-            color: #1e40af; /* Darker primary color for text/icon */
+            border-color: #2563eb;
+            background-color: #e0e7ff;
+            color: #1e40af;
         }
-        /* Override svg fill specifically if needed, though currentColor with parent's color change should work */
         .input-group:focus-within .input-group-prepend .input-group-text svg {
-             fill: #1e40af; /* Explicitly set icon color on focus */
+             fill: #1e40af;
         }
 
-        /* Ensure the input itself also shows a clear focus state when part of a group */
         .input-group .form-control:focus {
-            border-color: #2563eb; /* Match primary focus color */
+            border-color: #2563eb;
             box-shadow: 0 0 0 3px rgba(37, 99, 235, 0.2);
-            /* border-left: 1px solid #2563eb; */ /* Ensure left border is visible and colored on focus */
         }
          .input-group-prepend {
-            display: flex; /* Already present */
-            align-items: center; /* Already present */
+            display: flex;
+            align-items: center;
         }
 
 
@@ -264,7 +254,7 @@
                 <div class="input-group-prepend">
                         <span class="input-group-text">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-clock-history" viewBox="0 0 16 16">
-                                <path d="M8.515 1.019A7 7 0 0 0 8 1V0a8 8 0 0 1 .589.022l-.074.997zm2.004.45a7.003 7.003 0 0 0-.985-.299l.219-.976c.383.086.76.2 1.126.342l-.36.933zm1.37.71a7.01 7.01 0 0 0-.439-.27l.493-.87a8.025 8.025 0 0 1 .979.654l-.615.789a6.996 6.996 0 0 0-.418-.302zm1.834 1.798a6.99 6.99 0 0 0-.653-.796l.724-.69c.27.285.52.59.747.91l-.818.576zm.744 1.352a7.08 7.08 0 0 0-.214-.468l.893-.45a7.986 7.986 0 0 1 .45 1.088l-.95.313a7.023 7.023 0 0 0-.179-.483zm.53 2.507a6.991 6.991 0 0 0-.1-1.025l.985-.17c.067.386.106.778.116 1.17l-1 .025zm-.131 1.538c.033-.17.06-.339.081-.51l.993.123a7.957 7.957 0 0 1-.23 1.155l-.964-.267c.046-.165.086-.332.12-.501zm-.952 2.379c.184-.29.346-.594.486-.908l.914.405c-.16.36-.345.706-.555 1.038l-.845-.535zm-.964 1.205c.122-.122.239-.248.35-.378l.758.653a8.073 8.073 0 0 1-2.018 1.44l.267-.977c.268.072.53.14.79.194z"/>
+                                <path d="M8.515 1.019A7 7 0 0 0 8 1V0a8 8 0 0 1 .589.022l-.074.997zm2.004.45a7.003 7.003 0 0 0-.985-.299l.219-.976c.383.086.76.2 1.126.342l-.36.933zm1.37.71a7.01 7.01 0 0 0-.439-.27l.493-.87a8.025 8.025 0 0 1 .979.654l-.615.789a6.996 6.996 0 0 0-.418-.302zm1.834 1.798a6.99 6.99 0 0 0-.653-.796l.724-.69c.27.285.59.747.91l-.818.576zm.744 1.352a7.08 7.08 0 0 0-.214-.468l.893-.45a7.986 7.986 0 0 1 .45 1.088l-.95.313a7.023 7.023 0 0 0-.179-.483zm.53 2.507a6.991 6.991 0 0 0-.1-1.025l.985-.17c.067.386.106.778.116 1.17l-1 .025zm-.131 1.538c.033-.17.06-.339.081-.51l.993.123a7.957 7.957 0 0 1-.23 1.155l-.964-.267c.046-.165.086-.332.12-.501zm-.952 2.379c.184-.29.346-.594.486-.908l.914.405c-.16.36-.345.706-.555 1.038l-.845-.535zm-.964 1.205c.122-.122.239-.248.35-.378l.758.653a8.073 8.073 0 0 1-2.018 1.44l.267-.977c.268.072.53.14.79.194z"/>
                                 <path d="M8 3.5a.5.5 0 0 0-1 0V9a.5.5 0 0 0 .252.434l3.5 2a.5.5 0 0 0 .496-.868L8 8.71V3.5z"/>
                               </svg>
                         </span>
@@ -280,7 +270,6 @@
     document.getElementById('add-train-form').addEventListener('submit', function(event) {
         event.preventDefault();
 
-        // Basic client-side validation
         const trainNumber = document.getElementById('trainNumber').value;
         const trainName = document.getElementById('trainName').value;
         const source = document.getElementById('source').value;
@@ -292,7 +281,6 @@
             showAlert('danger', 'Please fill in all fields.');
             return;
         }
-        //can add more validation here, e.g., arrivalTime > departureTime
 
         const trainData = {
             trainNumber,
@@ -303,27 +291,18 @@
             arrivalTime
         };
 
-        const token = localStorage.getItem('adminToken');
-        if (!token) {
-            showAlert('danger', 'Admin not logged in. Please log in to add trains.');
-            return;
-        }
-
-        fetch('http://localhost:8080/train/create', { // Ensure this is your correct API endpoint
+        fetch('http://localhost:8080/train/create', {
             method: 'POST',
             headers: {
-                'Content-Type': 'application/json',
-                'Authorization': `Bearer ${token}`
+                'Content-Type': 'application/json'
             },
             body: JSON.stringify(trainData),
         })
         .then(response => {
             if (!response.ok) {
-                // Try to parse error message from backend if available
                 return response.json().then(errorData => {
                     throw new Error(errorData.message || `Failed to add train (HTTP ${response.status})`);
                 }).catch(() => {
-                    // Fallback if errorData parsing fails or not JSON
                     throw new Error(`Failed to add train (HTTP ${response.status})`);
                 });
             }
@@ -331,7 +310,7 @@
         })
         .then(data => {
             console.log('Success:', data);
-            showAlert('success', data.message || 'Train added successfully!'); // Use message from backend if present
+            showAlert('success', data.message || 'Train added successfully!');
             document.getElementById('add-train-form').reset();
         })
         .catch((error) => {
@@ -342,22 +321,19 @@
 
     function showAlert(type, message) {
         const alertContainer = document.getElementById('alert-container');
-        // Clear previous alerts immediately
         alertContainer.innerHTML = '';
         const alertDiv = document.createElement('div');
         alertDiv.className = `alert alert-${type}`;
         alertDiv.textContent = message;
-        // Apply animation class after element is added to DOM (next frame)
         requestAnimationFrame(() => {
              alertContainer.appendChild(alertDiv);
         });
 
-        // Auto-remove alert after 5 seconds
         setTimeout(() => {
-            if (alertDiv.parentElement) { // Check if it's still in the DOM
-                 alertDiv.style.opacity = '0'; // Start fade out
+            if (alertDiv.parentElement) {
+                 alertDiv.style.opacity = '0';
                  alertDiv.style.transform = 'translateY(-10px)';
-                 setTimeout(() => alertDiv.remove(), 300); // Remove after fade out
+                 setTimeout(() => alertDiv.remove(), 300);
             }
         }, 5000);
     }
